python modules version check
[kaustubhj@kaustubh-pc ~]$ export WORKON_HOME=$HOME/.virtualenvs
[kaustubhj@kaustubh-pc ~]$ export VIRTUALENVWRAPPER_PYTHON=/usr/bin/python3
[kaustubhj@kaustubh-pc ~]$ source /usr/bin/virtualenvwrapper.sh
[kaustubhj@kaustubh-pc ~]$ workon cv
(dl4cv) [kaustubhj@kaustubh-pc ~]$ python
Python 3.7.2 (default, Jan 10 2019, 16:09:48) 
[GCC 8.2.1 20181127] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> import keras
Using TensorFlow backend.
2020-03-18 12:06:23.298600: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libnvinfer.so.6'; dlerror: libnvinfer.so.6: cannot open shared object file: No such file or directory
2020-03-18 12:06:23.298847: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libnvinfer_plugin.so.6'; dlerror: libnvinfer_plugin.so.6: cannot open shared object file: No such file or directory
2020-03-18 12:06:23.298870: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:30] Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.
>>> import scipy
>>> scipy.__version__
'1.4.1'
>>> import numpy
>>> numpy.__version__
'1.18.1'
>>> import matplotlib
>>> matplotlib.__version__
'3.2.0'
>>> import pillow
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'pillow'
>>> import pillow
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'pillow'
>>> import tensorflow
>>> import keras
>>> pip install pillow
  File "<stdin>", line 1
    pip install pillow
              ^
SyntaxError: invalid syntax
>>> exit
Use exit() or Ctrl-D (i.e. EOF) to exit
>>> exit()
(dl4cv) [kaustubhj@kaustubh-pc ~]$ pip install pillow
Requirement already satisfied: pillow in ./.virtualenvs/dl4cv/lib/python3.7/site-packages (7.0.0)
(dl4cv) [kaustubhj@kaustubh-pc ~]$ python
Python 3.7.2 (default, Jan 10 2019, 16:09:48) 
[GCC 8.2.1 20181127] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> import pillow
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'pillow'
>>> exit()
(dl4cv) [kaustubhj@kaustubh-pc ~]$ python2
Python 2.7.17 (default, Oct 22 2019, 09:14:09) 
[GCC 9.2.0] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> import pillow
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ImportError: No module named pillow
>>> exit()
(dl4cv) [kaustubhj@kaustubh-pc ~]$ pip3 install pillow
Requirement already satisfied: pillow in ./.virtualenvs/dl4cv/lib/python3.7/site-packages (7.0.0)
(dl4cv) [kaustubhj@kaustubh-pc ~]$ pip uninstall pillow
Found existing installation: Pillow 7.0.0
Uninstalling Pillow-7.0.0:
  Would remove:
    /home/kaustubhj/.virtualenvs/dl4cv/lib/python3.7/site-packages/PIL/*
    /home/kaustubhj/.virtualenvs/dl4cv/lib/python3.7/site-packages/Pillow-7.0.0.dist-info/*
Proceed (y/n)? y
  Successfully uninstalled Pillow-7.0.0
(dl4cv) [kaustubhj@kaustubh-pc ~]$ pip install pillow
Collecting pillow
  Using cached Pillow-7.0.0-cp37-cp37m-manylinux1_x86_64.whl (2.1 MB)
Installing collected packages: pillow
Successfully installed pillow-7.0.0
(dl4cv) [kaustubhj@kaustubh-pc ~]$ python
Python 3.7.2 (default, Jan 10 2019, 16:09:48) 
[GCC 8.2.1 20181127] on linux
Type "help", "copyright", "credits" or "license" for more information.
>>> import pillow
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'pillow'
>>> import imutils
>>> import h5py
>>> h5py.__version__
'2.10.0'
>>> import PIL
>>> PIL.__version__
'7.0.0'
>>> import requests
>>> requests.__version__
'2.23.0'
>>> import progressbar2
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'progressbar2'
>>> import progressbar
>>> progressbar.__version__
'3.50.0'
>>> import scikit-learn
  File "<stdin>", line 1
    import scikit-learn
                 ^
SyntaxError: invalid syntax
>>> import scikit
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
ModuleNotFoundError: No module named 'scikit'
>>> import sklearn
>>> sklearn.__version__
'0.22.2.post1'
>>> import tensorflow
2020-03-18 12:22:54.527061: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libnvinfer.so.6'; dlerror: libnvinfer.so.6: cannot open shared object file: No such file or directory
2020-03-18 12:22:54.527202: W tensorflow/stream_executor/platform/default/dso_loader.cc:55] Could not load dynamic library 'libnvinfer_plugin.so.6'; dlerror: libnvinfer_plugin.so.6: cannot open shared object file: No such file or directory
2020-03-18 12:22:54.527221: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:30] Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.
>>> tensorflow.__version__
'2.1.0'
>>> import keras
Using TensorFlow backend.
>>> kera.__version__
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'kera' is not defined
>>> keras.__version__
'2.3.1'
>>> exit()
(dl4cv) [kaustubhj@kaustubh-pc ~]$ 


